--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,30 @@
 .header-container {
     display: flex;
     justify-content: center;
-    background: #202020;
-    margin-bottom: 20px;
 }
 
 .logo-wrapper {
-    width:200px;
-    height:50px;
+    height:70px;
     display: flex;
     align-items: center;
     justify-content: center;
     background: #fff;
+    padding: 10px;
 }
 
+.header-text {
+    font-size: 2.2rem;
+    color: #202020;
+    font-family: 'Coiny', cursive;
+}
+
+.logo {
+   display: flex;
+   justify-content: center;
+}
+
+.logo img {
+    width: 50px;
+    height: 50px;
+    margin: 0 5px;
+}
