--- a/src/components/Main/PrintPreview/DragDrop/DragDrop.css
+++ b/src/components/Main/PrintPreview/DragDrop/DragDrop.css
@@ -1,3 +1,9 @@
+/*Main dragdrop layout*/
+.drag-drop-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .drag-drop-panel {
     background: #F8F8F8;
     margin: 0 30px;
@@ -58,19 +64,9 @@
 .delete-icon img {
     height: 20px;
     width: 20px;
-}*
+}
 
-.title-blackBG {
-    background-color: #202020;
-    color: #ffffff;
-    font-size: 1.2vw;
-    width: 92.5%;
-    text-align: center;
-    margin: 10px;
-    padding: 5px;
-  }
-
-/*labels saved*/
+/*Labels saved/to be dragged and dropped*/
 .label-to-print .label-wrapper {
     width: 25vw;
     height: 9vw;
@@ -121,13 +117,7 @@
     color: white
 }
 
-@media screen and (max-width: 1600px) and (max-height: 900px){
-    .label-to-print .label-wrapper {
-        width: 25vw;
-        height: 11vw;
-    }
-}
-
+/*PDF generated*/
 @media print {
     @page {
         size: A4;
@@ -174,14 +164,23 @@
         display: none;
     }
 
-    .labels-to-print .label-to-print{
-        display: none;
-    }
-
     .drag-drop-panel .text-center .single-line-input p{
         display:none;
     }
 
+    /*Saved Labels (Drag)*/
+    .labels-to-print .label-to-print{
+        display: none;
+    }
+    
+    .label-to-print {
+        width: 103mm;
+        margin: 0;
+        height: 73mm;
+        border: 1px solid black
+    }
+
+    /*Print Grid (Drop)*/
     .slot {
         width: 103mm;
         height: 73mm;
@@ -195,13 +194,7 @@
         border: none;
     }
 
-    .label-to-print {
-        width: 103mm;
-        margin: 0;
-        height: 73mm;
-        border: 1px solid black
-    }
-
+    /*Layout of label on the print grid (dropped)*/
     .slot .label-to-print .label-wrapper .title-blackBG{
         font-size: 25px;
         width: 95%;
@@ -241,6 +234,7 @@
         width: 40px;
     } 
 
+    /*Hide modal window in print*/
     .modal-window {
         width: 100%;
         height: 100%;
@@ -251,10 +245,10 @@
     }
 }
 
-/*
-
-
-
-
-*/
-
+/*Responsiveness*/
+@media screen and (max-width: 1600px) and (max-height: 900px){
+    .label-to-print .label-wrapper {
+        width: 25vw;
+        height: 11vw;
+    }
+}
