--- a/src/components/Main/PrintPreview/PrintPreview.css
+++ b/src/components/Main/PrintPreview/PrintPreview.css
@@ -1,47 +1,7 @@
-/*Label to Print */
-.labels-container {
-    border: 1px solid #303030;
-    height: 85vh;
-    width: 18rem;
-    margin: 10px;
-}
-
-.print-grid-container {
-    border: 1px solid #303030;
-    height: 85vh;
-    width: 40rem;
-    margin: 10px;
-    display: grid;
-    place-items: center;
-}
-
-.grid2x4 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-}
-
-.div1 { grid-area: 1 / 1 / 2 / 2; }
-.div2 { grid-area: 1 / 2 / 2 / 3; }
-.div3 { grid-area: 2 / 1 / 3 / 2; }
-.div4 { grid-area: 2 / 2 / 3 / 3; }
-.div5 { grid-area: 3 / 1 / 4 / 2; }
-.div6 { grid-area: 3 / 2 / 4 / 3; }
-.div7 { grid-area: 4 / 1 / 5 / 2; }
-.div8 { grid-area: 4 / 2 / 5 / 3; }
-
-iframe{
-    width: 30%;
-    height: 85vh;
-}
-
 .print-button {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-
 }
 
 .close-button {
@@ -50,6 +10,39 @@ iframe{
     align-items: flex-end;
 }
 
+/*Modal window for print preview*/
+#modal-wrap {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(48, 48, 48, 0.9);
+    position: fixed;
+    z-index: 8000;
+    top: 0;
+    display: none;
+  }
+  
+.modal-window {
+    border: 1px solid #202020;
+    padding: 20px;
+    position: fixed;
+    width: 75%;
+    height: 95%;
+    left: 50%;
+    top: -200%;
+    transform: translate(-50%, -50%);
+    z-index: 9000;
+    background-color: #fff;
+    transition: all 0.4s ease-in-out;
+}
+
+#modal-wrap.visible {
+    display: block;
+}
+
+#modal-wrap.visible + .modal-window {
+    top: 50%;
+}
+  
 @media screen and (max-width: 1600px) and (max-height: 900px){
  
 }
