--- a/src/shared-styles.css
+++ b/src/shared-styles.css
@@ -3,14 +3,15 @@
   font-family: "Roboto", sans-serif;
 }
 
+/*Layout*/
+.flex {
+  display: flex;
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.padding {
-  padding: 10px;
 }
 
 .flex-wrapper {
@@ -18,19 +19,8 @@
   justify-content: space-between;
 }
 
-.flex {
-  display: flex;
-}
-
 .flex-grow {
   flex-grow: 1;
-}
-
-.small-letters {
-  font-size: 0.8vw;
-}
-.size100 {
-  width: 100%;
 }
 
 .flex-end {
@@ -38,11 +28,17 @@
   justify-content: flex-end;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .word-wrap {
   word-wrap: break-word;
   width: 160px;
 }
 
+
+/*Word styles*/
 .title-big {
   padding: 10px;
   font-size: 1.1vw;
@@ -75,6 +71,10 @@
   padding: 3px;
 }
 
+.small-letters {
+  font-size: 0.8vw;
+}
+
 .title-blackBG {
   background-color: #202020;
   color: #ffffff;
@@ -86,6 +86,15 @@
   -webkit-print-color-adjust: exact;
 }
 
+.teal-bg {
+  background: #add2c9;
+}
+
+.box-shadow {
+  box-shadow: 0 1px 3px rgba(48, 48, 48, 0.12), 0 1px 2px rgba(48, 48, 48, 0.24);
+}
+
+/*Shared Button*/
 .buttons-wrapper {
   display: flex;
   justify-content: flex-end;
@@ -98,6 +107,7 @@
   border-radius: 4px;
 }
 
+/*Symbols input panel*/
 .symbol {
   height: 40%;
   width: 40%;
@@ -109,58 +119,18 @@
   height: 100%;
 }
 
-.text-center {
-  text-align: center;
+
+.padding {
+  padding: 10px;
 }
 
-.teal-bg {
-  background: #add2c9;
+.size100 {
+  width: 100%;
 }
-
-.box-shadow {
-  box-shadow: 0 1px 3px rgba(48, 48, 48, 0.12), 0 1px 2px rgba(48, 48, 48, 0.24);
-}
-
 .mr-5 {
   margin-right: 5px;
 }
 
-.flex {
-  display: flex;
-}
-
-#modal-wrap {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(48, 48, 48, 0.9);
-  position: fixed;
-  z-index: 8000;
-  top: 0;
-  display: none;
-}
-
-.modal-window {
-  /*   display: none; */
-  border: 1px solid #202020;
-  padding: 20px;
-  position: fixed;
-  width: 75%;
-  height: 95%;
-  left: 50%;
-  top: -200%;
-  transform: translate(-50%, -50%);
-  z-index: 9000;
-  background-color: #fff;
-  transition: all 0.4s ease-in-out;
-}
-
-#modal-wrap.visible {
-  display: block;
-}
-
-#modal-wrap.visible + .modal-window {
-  top: 50%;
-}
 
 @media screen and (max-width: 1600px) and (max-height: 900px) {
   .title-blackBG {
