--- a/src/components/Main/PrintPreview/DragDrop/DragDrop.css
+++ b/src/components/Main/PrintPreview/DragDrop/DragDrop.css
@@ -24,8 +24,8 @@
 .label-to-print {
     display: flex;
     margin: 2px;
-    width: 250px;
-    height: 175px;
+    width: 25vh;
+    height: 17.5vh;
     align-items: center;
     justify-content: center;
     cursor: pointer;
@@ -34,8 +34,8 @@
 .slot {
     display: flex;
     margin: 2px;
-    width: 250px;
-    height: 175px;
+    width: 25vh;
+    height: 17.5vh;
     border: 0.5px dashed #303030;
     align-items: center;
     justify-content: center;
@@ -68,20 +68,20 @@
 
 /*Labels saved/to be dragged and dropped*/
 .label-to-print .label-wrapper {
-    width: 25vw;
-    height: 9vw;
+    width: 25vh;
+    height: 17.5vh;
 }
 
 .label-to-print .label-wrapper .title-blackBG{
-    font-size: 15px;
-    margin: 5px;
+    font-size: 0.8rem;
+    margin: 2%;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container {
     padding: 0 2px;
     margin: 0 5px;
-    height: 100px;
-    width: 75%;
+    height: auto;
+    width: 55%;
     grid-template-columns: 35% 65%;
 }
 
@@ -95,11 +95,11 @@
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond img {
-    height: 3vw;
+    height: 2.5vw;
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
-    font-size: 0.5vw;
+    font-size: 0.3vw;
 }
 
 
@@ -245,10 +245,3 @@
     }
 }
 
-/*Responsiveness*/
-@media screen and (max-width: 1600px) and (max-height: 900px){
-    .label-to-print .label-wrapper {
-        width: 25vw;
-        height: 11vw;
-    }
-}
