--- a/src/components/Main/Input/Input.css
+++ b/src/components/Main/Input/Input.css
@@ -17,7 +17,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid rgb(202, 202, 202);
+  border-radius: 5px;
   padding: 3%;
   margin: 0 15px;
   margin-top: 20px;
