--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -9,10 +9,13 @@
 }
 
 .collection-wrapper {
-  width: 97%;
-  height: 25%;
+  max-width: 97%;
+  height: 15%;
   margin: 10px;
+  padding: 10px;
   background-color: #a9a9a9;
+  flex-wrap: wrap;
+  overflow-y: scroll;
 }
 
 @media screen and (max-width: 1600px) and (max-height: 900px) {
@@ -32,6 +35,21 @@
   width: 40vh;
   height: 28vh;
   border-radius: 5px;
+}
+
+.description-container {
+  display: grid;
+  grid-template-columns: 32% 68%;
+  grid-template-rows: 15% 15% 40% 15% 15%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  border: 0.5px solid #303030;
+  width: 70%;
+  height: 14vh;
+  padding: 3px;
+  margin: 0 0 0 10px;
+  font-size: 0.7vw;
+  padding: 3px;
 }
 
 .warning-diamond {
@@ -160,7 +178,7 @@
 /* ///////////////    MiniLabel.js    /////////////// */
 
 .minilabel-wrapper {
-  width: 8vw;
+  min-width: 8vw;
   height: 11vh;
   border-radius: 5px;
   position: relative;
@@ -169,8 +187,8 @@
   align-items: center;
 }
 .selectedminilabel-wrapper {
-  background-color: black;
-  width: 8vw;
+  background-color: rgb(255, 62, 62);
+  min-width: 8vw;
   height: 11vh;
   border-radius: 5px;
   position: relative;
@@ -224,6 +242,7 @@
 
 .minilabel {
   display: flex;
+  flex-direction: column;
   height: 92%;
   width: 92%;
   background-color: white;
@@ -244,22 +263,35 @@
 .minititle-blackBG {
   background-color: #202020;
   color: #ffffff;
-  font-size: 10%;
-  width: 2vw;
+  width: 92.5%;
   max-height: 2vh;
   text-align: center;
   padding: 2px;
+  margin: 5px;
+  -webkit-print-color-adjust: exact;
 }
 
 .minilabel-sheet {
   width: 60%;
 }
+.miniContainer {
+  display: flex;
+  width: 100%;
+  height: 50%;
+}
 
 .minidescription-container {
-  border: 1px solid black;
-  width: 90%;
-  margin: 1px;
+  display: grid;
+  grid-template-columns: 32% 68%;
+  grid-template-rows: 15% 15% 40% 15% 15%;
+  border: 0.5px solid #303030;
+  width: 65%;
+  height: 4vh;
+  margin-left: 6px;
+  font-size: 5px;
+  padding: 2px;
 }
+
 .title-minilabel {
   font-size: 0.2vw;
   font-weight: bold;
@@ -268,24 +300,66 @@
 }
 
 .minisymbol-wrapper {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .minisymbol {
-  height: 12px;
-  width: 12px;
-  margin: 0px;
+  height: 100%;
+  width: 8%;
+  margin: 0.5%;
 }
 .minisymbol img {
   width: 100%;
   height: 100%;
 }
 
+.miniwarning-diamond {
+  height: 100%;
+  width: 26%;
+}
+
+.minidiamond-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
 .miniNFPA {
-  height: 15px;
+  height: 30px;
 }
 
 .NFPAtitle {
   font-size: 4px;
+}
+
+.minigrid1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.minigrid2 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.minigrid3 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.minigrid4 {
+  grid-area: 4 / 1 / 5 / 2;
+}
+.minigrid5 {
+  grid-area: 5 / 1 / 6 / 2;
+}
+.minigrid6 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.minigrid7 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+.minigrid8 {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.minigrid9 {
+  grid-area: 4 / 2 / 5 / 3;
+}
+.minigrid10 {
+  grid-area: 5 / 2 / 6 / 3;
 }
