--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -10,7 +10,7 @@
 
 .collection-wrapper {
   max-width: 97%;
-  height: 15%;
+  height: 20%;
   margin: 10px;
   padding: 10px;
   background-color: #a9a9a9;
@@ -155,6 +155,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 5px;
 }
 
 .addLabel {
