--- a/src/components/Main/PrintPreview/DragDrop/DragDrop.css
+++ b/src/components/Main/PrintPreview/DragDrop/DragDrop.css
@@ -1,314 +1,351 @@
 /*Main dragdrop layout*/
 .drag-drop-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .drag-drop-panel {
-    background: #F8F8F8;
-    margin: 0 30px;
-    border-radius: 4px;
-    height: 100%;
-    margin: 0 40px;
+  background: #f8f8f8;
+  margin: 0 30px;
+  border-radius: 4px;
+  height: 100%;
+  margin: 0 40px;
 }
 
 .labels-to-print {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 90%;
-    height: 82%;
-    padding: 10px;
-    margin: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 90%;
+  height: 82%;
+  padding: 10px;
+  margin: 10px;
 }
 
 .label-to-print {
-    display: flex;
-    margin: 2px;
-    width: 25vh;
-    height: 17.5vh;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  display: flex;
+  margin: 2px;
+  width: 25vh;
+  height: 17.5vh;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .slot {
-    display: flex;
-    margin: 2px;
-    width: 25vh;
-    height: 17.5vh;
-    border: 0.5px dashed #303030;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+  display: flex;
+  margin: 2px;
+  width: 25vh;
+  height: 17.5vh;
+  border: 0.5px dashed #303030;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .slots {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 90%;
-    height: 82%;
-    padding: 10px;
-    margin: 10px 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 90%;
+  height: 82%;
+  padding: 10px;
+  margin: 10px 10px;
 }
 
 .print-button {
-    margin: 10px 30px;
+  margin: 10px 30px;
 }
 
 .delete-button {
-    position: absolute;
-    top: 5px;
-    right: 5px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
 
 .delete-icon img {
-    height: 20px;
-    width: 20px;
+  height: 20px;
+  width: 20px;
 }
 
 /*Labels saved/to be dragged and dropped*/
 .label-to-print .label-wrapper {
-    width: 25vh;
-    height: 17.5vh;
+  width: 25vh;
+  height: 17.5vh;
 }
 
-.label-to-print .label-wrapper .title-blackBG{
-    font-size: 0.8rem;
-    margin: 2% 2% 0 2%;
+.label-to-print .label-wrapper .title-blackBG {
+  font-size: 0.8rem;
+  margin: 2% 2% 0 2%;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container {
-    padding: 0 2%;
-    margin: 2%;
-    height: 10vh;
-    width: 65%;
-    grid-template-columns: 30% 70%;
+  padding: 0 2%;
+  margin: 2%;
+  height: 10vh;
+  width: 65%;
+  grid-template-columns: 30% 70%;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container .word-wrap {
-    width: 98%;
+  width: 98%;
 }
 
 .label-to-print .label-wrapper .flex-center .description-container > div {
-    font-size: 0.5rem;
-    text-align: left;
+  font-size: 0.5rem;
+  text-align: left;
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond {
-    height: 18%;
-    width: 18%;
-    margin: 3%;
+  height: 3vw;
+  width: 3vw;
+  margin: 3%;
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond img {
-    height: 2.5vw;
+  height: 100%;
 }
 
 .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
-    height: 2vw;
-    width: 2vw;
+  height: 100%;
+  width: 100%;
 }
 
-.label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper > div{
-    font-size: 0.6rem;
+.label-to-print
+  .label-wrapper
+  .flex-center
+  .warning-diamond
+  .diamond-wrapper
+  > div {
+  font-size: 0.6rem;
 }
 
 .label-to-print .label-wrapper .symbol-wrapper {
-    margin: 0;
+  margin: 0;
 }
 
 .label-to-print .label-wrapper .symbol-wrapper .symbol {
-    height: 20px;
-    width: 20px;
-} 
+  height: 20px;
+  width: 20px;
+}
 
 .black {
-    background-color: #202020;
-    color: white
+  background-color: #202020;
+  color: white;
 }
 
 /*PDF generated*/
 @media print {
-    @page {
-        size: A4;
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-left: 0;
-        margin-right: 0;
-        border:none;
-    }
+  @page {
+    size: A4;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    border: none;
+  }
 
-    .label-to-print .label-wrapper {
-        width: 100mm;
-        height: 70mm;
-        border: 0.5px solid #202020
-    }
+  .label-to-print .label-wrapper {
+    width: 100mm;
+    height: 70mm;
+    border: 0.5px solid #202020;
+  }
 
-    
-    .labels-to-print {
-        display: none;
-    }
+  .labels-to-print {
+    display: none;
+  }
 
-    .drag-drop-panel .text-center .title-big{
-        display:none;
-    }
+  .drag-drop-panel .text-center .title-big {
+    display: none;
+  }
 
-    .delete-button {
-        display: none;
-    }
+  .delete-button {
+    display: none;
+  }
 
-    .close-button {
-        display: none;
-    }
+  .close-button {
+    display: none;
+  }
 
-    .print-button {
-        display: none;
-    }
+  .print-button {
+    display: none;
+  }
 
-    .drag-drop-panel {
-        background: none;
-        margin: 0;
-        border: transparent;
-    }
+  .drag-drop-panel {
+    background: none;
+    margin: 0;
+    border: transparent;
+  }
 
-    .drag-drop-panel .text-center .single-line-input p{
-        display:none;
-    }
+  .drag-drop-panel .text-center .single-line-input p {
+    display: none;
+  }
 
-    /*Saved Labels (Drag)*/
-    .labels-to-print .label-to-print{
-        display: none;
-    }
-    
-    .label-to-print {
-        width: 103mm;
-        margin: 0;
-        height: 73mm;
-    }
+  /*Saved Labels (Drag)*/
+  .labels-to-print .label-to-print {
+    display: none;
+  }
 
-    /*Print Grid (Drop)*/
-    .slot {
-        width: 103mm;
-        height: 73mm;
-        margin: 0;
-        border: transparent;
-    }
+  .label-to-print {
+    width: 103mm;
+    margin: 0;
+    height: 73mm;
+  }
 
-    .slots {
-        padding: 0;
-        margin: 0;
-        border: none;
-    }
+  /*Print Grid (Drop)*/
+  .slot {
+    width: 103mm;
+    height: 73mm;
+    margin: 0;
+    border: transparent;
+  }
 
-    /*Layout of label on the print grid (dropped)*/
-    .drag-drop-container .box-shadow {
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0);
-    }
+  .slots {
+    padding: 0;
+    margin: 0;
+    border: none;
+  }
 
-    .slot .label-to-print .label-wrapper .title-blackBG{
-        font-size: 23px;
-        width: 93%;
-    }
+  /*Layout of label on the print grid (dropped)*/
+  .drag-drop-container .box-shadow {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0);
+  }
 
-    .label-to-print .label-wrapper .flex-center .description-container {
-        padding: 1%;
-        margin: 2% 2% 0 2%;
-        height: 140px;
-        grid-template-columns: 30% 70%;
-    }
+  .slot .label-to-print .label-wrapper .title-blackBG {
+    font-size: 23px;
+    width: 93%;
+  }
 
-    .label-to-print .label-wrapper .flex-center .description-container .word-wrap{
-        width: 95%;
-    }
-    
-    .label-to-print .label-wrapper .flex-center .description-container > div {
-        font-size: 13px;
-        text-align: left;
-    }
+  .label-to-print .label-wrapper .flex-center .description-container {
+    padding: 1%;
+    margin: 2% 2% 0 2%;
+    height: 140px;
+    grid-template-columns: 30% 70%;
+  }
 
-    .label-to-print .label-wrapper .flex-center .warning-diamond img {
-        height: 90px;
-        margin: 5px;
-        padding: 0;
-    }
-    
-    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
-        font-size: 1vw;
-    }
+  .label-to-print
+    .label-wrapper
+    .flex-center
+    .description-container
+    .word-wrap {
+    width: 95%;
+  }
 
-    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper > div{
-        font-size: 1rem;
-    }
+  .label-to-print .label-wrapper .flex-center .description-container > div {
+    font-size: 13px;
+    text-align: left;
+  }
 
-    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
-        height: 8.5vw;
-        width: 8.5vw;
-    }
+  .label-to-print .label-wrapper .flex-center .warning-diamond img {
+    height: 100%;
+    margin: 5px;
+    padding: 0;
+  }
 
-    .label-to-print .label-wrapper .symbol-wrapper {
-        margin: 2%;
-    }
-    
-    .label-to-print .label-wrapper .symbol-wrapper .symbol {
-        height: 38px;
-        width: 38px;
-    } 
+  .label-to-print
+    .label-wrapper
+    .flex-center
+    .warning-diamond
+    .diamond-wrapper {
+    font-size: 1vw;
+  }
+  .label-to-print .label-wrapper .flex-center .warning-diamond {
+    height: 12vw;
+    width: 12vw;
+  }
 
-    /*Hide modal window in print*/
-    .modal-window {
-        width: 100%;
-        height: 100%;
-        padding: 0;
-        margin: 0;
-    }
+  .label-to-print
+    .label-wrapper
+    .flex-center
+    .warning-diamond
+    .diamond-wrapper
+    > div {
+    font-size: 1rem;
+  }
+
+  .label-to-print
+    .label-wrapper
+    .flex-center
+    .warning-diamond
+    .diamond-wrapper {
+    height: 100%;
+    width: 100%;
+  }
+
+  .label-to-print .label-wrapper .symbol-wrapper {
+    margin: 2%;
+  }
+
+  .label-to-print .label-wrapper .symbol-wrapper .symbol {
+    height: 38px;
+    width: 38px;
+  }
+
+  /*Hide modal window in print*/
+  .modal-window {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 @media screen and (max-width: 1600px) and (max-height: 900px) {
-    .label-to-print .label-wrapper .flex-center .description-container .word-wrap{
-        width: 97%;
-    }
+  .label-to-print
+    .label-wrapper
+    .flex-center
+    .description-container
+    .word-wrap {
+    width: 97%;
+  }
 
-    .drag-drop-panel {
-        height: 85%;
-    }
+  .drag-drop-panel {
+    height: 85%;
+  }
 
-    .label-to-print .label-wrapper .flex-center .description-container {
-        padding: 0 1%;
-        margin: 1%;
-        height: 9.5vh;
-        width: 70%;
-        grid-template-columns: 38% 62%;
-    }
+  .label-to-print .label-wrapper .flex-center .description-container {
+    padding: 0 1%;
+    margin: 1%;
+    height: 9.5vh;
+    width: 70%;
+    grid-template-columns: 38% 62%;
+  }
 
-    .label-to-print .label-wrapper .flex-center .description-container > div {
-        font-size: 6px;
-        text-align: left;
-    }
+  .label-to-print .label-wrapper .flex-center .description-container > div {
+    font-size: 6px;
+    text-align: left;
+  }
 
-    .label-to-print .label-wrapper .flex-center .warning-diamond {
-        margin:1%;
-    }
+  .label-to-print .label-wrapper .flex-center .warning-diamond {
+    margin: 1%;
+  }
 
-    .label-to-print .label-wrapper .flex-center .warning-diamond img {
-        height: 2vw;
-    }
-    
-    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper {
-        height: 2vw;
-        width: 2vw;
-    }
+  .label-to-print .label-wrapper .flex-center .warning-diamond img {
+    height: 100%;
+  }
 
-    .label-to-print .label-wrapper .flex-center .warning-diamond .diamond-wrapper > div{
-        font-size: 0.5rem;
-    }
+  .label-to-print
+    .label-wrapper
+    .flex-center
+    .warning-diamond
+    .diamond-wrapper {
+    height: 3vw;
+    width: 3vw;
+  }
 
-    .label-to-print .label-wrapper .symbol-wrapper {
-        margin: 1%;
-    }
-    
-    .label-to-print .label-wrapper .symbol-wrapper .symbol {
-        height: 1.2vw;
-        width: 1.2vw;
-    } 
+  .label-to-print
+    .label-wrapper
+    .flex-center
+    .warning-diamond
+    .diamond-wrapper
+    > div {
+    font-size: 0.5rem;
+  }
 
+  .label-to-print .label-wrapper .symbol-wrapper {
+    margin: 1%;
+  }
+
+  .label-to-print .label-wrapper .symbol-wrapper .symbol {
+    height: 1.2vw;
+    width: 1.2vw;
+  }
 }
