--- a/src/components/Main/LabelPreview/LabelPreview.css
+++ b/src/components/Main/LabelPreview/LabelPreview.css
@@ -262,7 +262,10 @@
   max-height: 2vh;
   text-align: center;
   padding: 2px;
-  margin: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 2px;
   -webkit-print-color-adjust: exact;
 }
 
@@ -283,7 +286,7 @@
   width: 65%;
   height: 4vh;
   margin-left: 6px;
-  font-size: 5px;
+  font-size: 3px;
   padding: 2px;
 }
 
@@ -295,7 +298,7 @@
 }
 
 .minisymbol {
-  height: 100%;
+  height: 80%;
   width: 8%;
   margin: 0.5%;
 }
@@ -308,6 +311,9 @@
   height: 100%;
   width: 26%;
 }
+.minisymbol-wrapper {
+  height: 20%;
+}
 
 .minidiamond-wrapper {
   display: flex;
@@ -318,7 +324,7 @@
 }
 
 .miniNFPA {
-  height: 30px;
+  height: 50%;
 }
 
 .NFPAtitle {
@@ -340,7 +346,7 @@
 
   .description-container {
     width: 67%;
-    height: 12vh;
+    height: 14vh;
     margin: 0 1% 0 0;
     padding: 1%;
   }
