--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,18 +1,15 @@
 .main-container {
   align-items: center;
+
 }
 
 .main-page-view {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-@media only screen and (max-width: 500px) {
-  .main-page-view {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  width: 80%;
+  margin: auto;
 }
 
 /* ///////////////    LabelPreview.js and Input.js    /////////////// */
@@ -20,7 +17,7 @@
 .panel-container {
   display: flex;
   justify-content: center;
-  width: 40%;
+  width: 100%;
   height: 85vh;
   margin: 10px;
 }
@@ -33,10 +30,20 @@
 
 .main-bg-wrapper {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
   justify-content: center;
   background: #add2c9;
   width: 100%;
   padding: 20px;
   margin: 0 20px;
   border-radius: 5px;
+}
+
+@media (max-width: 1200px) {
+  .main-page-view {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
